cmake_minimum_required(VERSION 3.15)
project(TP1_First_Steps C)

set(CMAKE_C_STANDARD 11)
add_compile_options(-O0 -Wall -Wextra -Wold-style-cast -Wdouble-promotion
					-Wshadow -Wformat=2 -Wunreachable-code-aggressive)

add_executable(TP1_First_Steps
				#ex1-hello-world.c)
				#ex2-is-prime.c)
				#ex3-price-is-right.c)
				ex4-exp.c)
				#ex5-bin.c)
